<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>9</version>
    </parent>

    <developers>
        <developer>
            <id>lukas</id>
            <name>Lukas Krecan</name>
            <email>lukas@krecan.net</email>
        </developer>
    </developers>

    <groupId>net.javacrumbs.shedlock</groupId>
    <artifactId>shedlock-parent</artifactId>
    <packaging>pom</packaging>
    <version>4.28.0</version>
    <modules>
        <module>shedlock-core</module>
        <module>micronaut/shedlock-micronaut</module>
        <module>micronaut/test/micronaut-jdbc</module>
        <module>micronaut/test/micronaut-jdbc-new</module>
        <module>micronaut/test/micronaut-jdbc-template</module>
        <module>spring/shedlock-spring</module>
        <module>spring/test/shedlock-springboot-old-test</module>
        <module>spring/test/shedlock-springboot-test</module>
        <module>spring/test/shedlock-springboot-future-test</module>
        <module>spring/test/shedlock-springboot-sleuth-test</module>
        <module>spring/test/shedlock-springboot-kotlin-test</module>
        <module>spring/test/shedlock-testng-test</module>
        <module>shedlock-test-support</module>
        <module>providers/etcd/shedlock-provider-etcd-jetcd</module>
        <module>providers/hazelcast/shedlock-provider-hazelcast</module>
        <module>providers/hazelcast/shedlock-provider-hazelcast4</module>
        <module>providers/jdbc/shedlock-test-support-jdbc</module>
        <module>providers/jdbc/shedlock-provider-jdbc-internal</module>
        <module>providers/jdbc/shedlock-provider-jdbc</module>
        <module>providers/jdbc/shedlock-provider-jdbc-template</module>
        <module>providers/jdbc/shedlock-provider-jdbc-micronaut</module>
        <module>providers/mongo/shedlock-provider-mongo</module>
        <module>providers/mongo/shedlock-provider-mongo-reactivestreams</module>
        <module>providers/neo4j/shedlock-provider-neo4j</module>
        <module>providers/elasticsearch/shedlock-provider-elasticsearch</module>
        <module>providers/couchbase/shedlock-provider-couchbase-javaclient</module>
        <module>providers/couchbase/shedlock-provider-couchbase-javaclient3</module>
        <module>providers/zookeeper/shedlock-provider-zookeeper-curator</module>
        <module>providers/redis/shedlock-provider-redis-jedis</module>
        <module>providers/redis/shedlock-provider-redis-spring</module>
        <module>providers/redis/shedlock-provider-redis-spring-1</module>
        <module>providers/dynamodb/shedlock-provider-dynamodb</module>
        <module>providers/dynamodb/shedlock-provider-dynamodb2</module>
        <module>providers/cassandra/shedlock-provider-cassandra</module>
        <module>providers/consul/shedlock-provider-consul</module>
        <module>providers/arangodb/shedlock-provider-arangodb</module>
        <module>providers/ignite/shedlock-provider-ignite</module>
    </modules>

    <properties>
        <spring.version>5.3.10</spring.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jdk.version>1.8</jdk.version>
        <spring-boot-old.version>2.4.11</spring-boot-old.version>
        <spring-boot-current.version>2.5.5</spring-boot-current.version>
        <spring-boot-future.version>2.6.0-M1</spring-boot-future.version>
        <junit.version>5.7.2</junit.version>
        <test-containers.version>1.16.0</test-containers.version>
        <kotlin.version>1.5.31</kotlin.version>
        <micronaut.version>2.5.13</micronaut.version>
        <micronaut-data.version>2.5.0</micronaut-data.version>
        <logback.version>1.2.6</logback.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.32</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.2</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
        </dependency>

        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>3.12.4</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.awaitility</groupId>
                <artifactId>awaitility</artifactId>
                <version>4.1.0</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>3.21.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>4.1</version>
                <configuration>
                    <header>header.txt</header>
                    <excludes>
                        <exclude>LICENSE.txt</exclude>
                        <exclude>*.xml</exclude>
                        <exclude>*.properties</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <forkCount>4</forkCount>
                    <argLine>-Xmx512m</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <!-- https://bugs.openjdk.java.net/browse/JDK-8212233 -->
                    <source>8</source>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
            </plugin>
        </plugins>
    </build>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <profiles>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <configuration>
                            <keyname>C51E10BD96D06071</keyname>
                        </configuration>
                        <version>3.0.1</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>versions-maven-plugin</artifactId>
                        <version>2.8.1</version>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>permit-illegal-access</id>
            <activation>
                <jdk>[16,)</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>--illegal-access=permit</argLine>
                            <forkCount>4</forkCount>
                            <argLine>-Xmx512m</argLine>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <scm>
        <connection>scm:git:git@github.com:lukas-krecan/ShedLock.git</connection>
        <developerConnection>scm:git:git@github.com:lukas-krecan/ShedLock.git</developerConnection>
        <url>scm:git:git@github.com:lukas-krecan/ShedLock.git</url>
    </scm>
</project>
